--- a/RentCarServer/src/RentCarServer.Application/RentCarServer.Application.csproj
+++ b/RentCarServer/src/RentCarServer.Application/RentCarServer.Application.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\RentCarServer.Domain\RentCarServer.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ProtectionPackages\" />
+  </ItemGroup>
+
 </Project>
