All modules are completed

--- a/RentCarClient/package.json
+++ b/RentCarClient/package.json
@@ -11,7 +11,9 @@
     "@angular/forms": "~20.0.0",
     "@angular/platform-browser": "~20.0.0",
     "@angular/router": "~20.0.0",
+    "chart.js": "^4.5.1",
     "flexi-grid": "^20.0.7",
+    "flexi-popup": "^20.0.0",
     "flexi-select": "^20.0.14",
     "flexi-toast": "^20.0.3",
     "flexi-treeview": "^20.0.1",
